# autopyme

./: .env.example  .gitignore  README.md  plan_comunicacion.docx  roadmap_tp_gestion.xlsx
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 273d2ace9111_initial.py  a1b2c3d4e5f6_add_products.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  leads.py  products.py  users.py  webhooks.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: __init__.py  automation.py  base.py  conversation.py  event.py  integration.py  lead.py  product.py  tenant.py  user.py
backend/app/services/: email.py  perfit.py
backend/scripts/: check_leads.py  check_routes.py  check_users.py  cleanup_tenants.py  diagnose.py  import_csv.py  reset_password.py  seed.py  seed_admin.py  test_email.py  verify_login.py
docs/: form_antecedentes.csv  form_cursos2026.csv
frontend/: .env.local.example  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/automations/: page.tsx
frontend/src/: middleware.ts
frontend/src/app/: globals.css  page.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useLeads.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: index.ts
infra/: docker-compose.yml
infra/nginx/: nginx.conf
infra/nginx/conf.d/: autopyme.conf
infra/scripts/: init_db.sql  setup_vps.sh
(+21 files in other folders)
